--- a/facilities.html
+++ b/facilities.html
@@ -357,7 +357,7 @@
             ] },
           { top: "64%", left: "65.5%", name: "Ultrasound", images: [
             "src/img/facility/ultrasound_2.avif",
-            "src/img/facility/ultrasound_1.avif",
+            "src/img/facility/ultrasound_1.avif"
           ], descriptions: "Ultrasound Department: Diagnostic imaging services." },
           { top: "47%", left: "78%", name: "X-Ray", images: [
             "src/img/facility/xray_1.avif",
@@ -378,55 +378,49 @@
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
           { top: "37%", left: "9.5%", name: "Room 222", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
           { top: "37%", left: "14.5%", name: "Room 220", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
           { top: "37%", left: "23%", name: "Room 218", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
-            { top: "37%", left: "27.6%", name: "Isolation Room", images: [
+            { top: "37%", left: "27.6%", name: "Room 219", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
           { top: "37%", left: "32.5%", name: "Room 216", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Suite",
+            "Room Rate: Php2,700.00/Day"
             ] },
           { top: "37%", left: "37%", name: "Room 214", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Suite",
+            "Room Rate: Php2,700.00/Day"
             ] },
           { top: "37%", left: "41.5%", name: "Room 211", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
-            ] },
-          { top: "37%", left: "46%", name: "Room 209", images: [
-            "src/img/facility/or.avif"
-          ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
           { top: "37%", left: "53%", name: "EDP/IT", images: [
             "src/img/facility/it_1.avif",
@@ -459,55 +453,55 @@
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
           { top: "56%", left: "9.5%", name: "Room 223", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
           { top: "56%", left: "14.5%", name: "Room 221", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Suite",
+            "Room Rate: Php2,700.00/Day"
             ] },
           { top: "56%", left: "23%", name: "Room 219", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
             { top: "56%", left: "27.6%", name: "Room 217", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
           { top: "56%", left: "32.5%", name: "Room 215", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
           { top: "56%", left: "37%", name: "Room 212", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
           { top: "56%", left: "41.5%", name: "Room 210", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Rate: Php2,200.00/Day"
             ] },
           { top: "56%", left: "46%", name: "Room 208", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Suite",
+            "Room Rate: Php2,700.00/Day"
             ] },
             { top: "53%", left: "50.3%", name: "Nurse Station 2", images: [
             "src/img/facility/ns2.avif",
@@ -532,57 +526,57 @@
             { top: "77%", left: "23%", name: "Phaeco Room 227", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Small Private",
+            "Room Rate: Php1,800.00/Day"
             ] },
             { top: "77%", left: "27.6%", name: "Phaeco Room 228", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Small Private",
+            "Room Rate: Php1,800.00/Day"
             ] },
           { top: "77%", left: "32.5%", name: "Phaeco Room 229", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Small Private",
+            "Room Rate: Php1,800.00/Day"
             ] },
           { top: "77%", left: "37%", name: "Phaeco Room 230", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Small Private",
+            "Room Rate: Php1,800.00/Day"
             ] },
 
             { top: "80.5%", left: "68%", name: "Room 205", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Small Private",
+            "Room Rate: Php1,800.00/Day"
             ] },
             { top: "80.5%", left: "73%", name: "Room 204", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Small Private",
+            "Room Rate: Php1,800.00/Day"
             ] },
             { top: "80.5%", left: "77.5%", name: "Room 203", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Small Private",
+            "Room Rate: Php1,800.00/Day"
             ] },
             { top: "80.5%", left: "82.5%", name: "Room 202", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Small Private",
+            "Room Rate: Php1,800.00/Day"
             ] },
             { top: "80.5%", left: "87%", name: "Room 201", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Small Private",
+            "Room Rate: Php1,800.00/Day"
             ] },
 
         ] },
@@ -729,31 +723,36 @@
             "Room Details: Regular Private",
             "Room Rate: Php2000.00/Day"
             ] },
-            { top: "77%", left: "10%", name: "Presidential", images: [
+            { top: "77%", left: "10%", name: "Room 335", images: [
             "src/img/facility/presidential.avif"
           ], descriptions: [
             "Room Details: Presidential Room",
             "Room Rate: Php4000.00/Day"
             ] },
-            { top: "77%", left: "23%", name: "Phaeco Room 227", images: [
+            { top: "77%", left: "17.5%", name: "Nurse Station 3 Annex", images: [
+            "src/img/facility/ns3_annex.avif"
+          ], descriptions: [
+            "Nurse Station 3 Annex: Additional nursing station for patient care.",
+            ] },
+            { top: "77%", left: "23%", name: "Room 336", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
             "Room Rate: Php2000.00/Day"
             ] },
-            { top: "77%", left: "27.6%", name: "Phaeco Room 228", images: [
+            { top: "77%", left: "27.6%", name: "Room 337", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
             "Room Rate: Php2000.00/Day"
             ] },
-          { top: "77%", left: "32.5%", name: "Phaeco Room 229", images: [
+          { top: "77%", left: "32.5%", name: "Room 338", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
             "Room Rate: Php2000.00/Day"
             ] },
-          { top: "77%", left: "37%", name: "Phaeco Room 230", images: [
+          { top: "77%", left: "37%", name: "Room 339", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
             "Room Details: Regular Private",
